--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
+  iconsax_flutter: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -62,10 +63,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/onboard1.png
-     - assets/images/onboard2.png
-     - assets/images/onboard3.png
-
+     - assets/images/
+     
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
