--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
   iconsax_flutter: ^1.0.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
